--- a/package.json
+++ b/package.json
@@ -26,14 +26,20 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "babel-preset-stage-1": "^6.1.18",
     "base62": "^1.1.2",
+    "css-loader": "^0.27.3",
     "lodash": "^3.10.1",
     "marked": "^0.3.6",
+    "moment": "^2.18.1",
     "react": "^0.14.3",
+    "react-datepicker": "^0.43.0",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
-    "redux": "^3.0.4"
+    "redux": "^3.0.4",
+    "redux-promise": "^0.5.3",
+    "style-loader": "^0.16.0"
   }
 }
