--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "babel-preset-stage-1": "^6.1.18",
     "base62": "^1.1.2",
+    "jquery": "^2.2.4",
     "lodash": "^3.10.1",
     "marked": "^0.3.6",
     "react": "^0.14.3",
