--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "lodash": "^3.10.1",
     "marked": "^0.3.6",
     "react": "^0.14.3",
+    "react-calendar-heatmap": "^1.1.0",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
+    "react-tooltip": "^3.2.10",
+    "recharts": "^0.21.2",
     "redux": "^3.0.4"
   }
 }
