--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "marked": "^0.3.6",
     "moment": "^2.18.1",
     "react": "^0.14.3",
+    "react-datepicker": "^0.43.0",
     "react-calendar-heatmap": "^1.1.0",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
