--- a/package.json
+++ b/package.json
@@ -34,15 +34,18 @@
     "moment": "^2.18.1",
     "react": "^0.14.3",
     "react-datepicker": "^0.43.0",
+    "react-dom": "^0.14.3",
+    "react-redux": "^4.0.0",
+    "react-router": "^2.0.1",
+    "redux": "^3.0.4",
+    "redux-promise": "^0.5.3",
+    "style-loader": "^0.16.0",
     "react-calendar-heatmap": "^1.1.0",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
-    "react-router-redux": "^4.0.8",
     "react-tooltip": "^3.2.10",
     "recharts": "^0.21.2",
-    "redux": "^3.0.4",
-    "redux-promise": "^0.5.3",
-    "style-loader": "^0.16.0"
+    "redux": "^3.0.4"
   }
 }
